[package]
name = "cannyls_bencher"
version = "0.1.0"
authors = ["yuuya uezato <yuuya_uezato@dwango.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "3.8"
# cannyls = "0.9"
chrono = "0.4"
cannyls = { git = "https://github.com/yuezato/cannyls", branch = "patch_for_issue27" }
rand = "*"
structopt = "*"
fibers_global = "*"
fibers_http_server = "*"
futures = "*"
